--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
       <div class="row">
         <div class="jumbotron"><!--JUMBOTRON-->
           <h1 class="special">I believe in greatness, I believe in you.</h1>
-          <p>brought to you by Jacque.</p>
+          <p class="fam-special">I'm Jacque S., a baby Web Developer</p>
         </div>
       </div>
         <div class="row">
           <div class="col-md-12 center"> <!-- NAVBAR-->
             <section id="intro-sec">
-              <h1 class="special">Making a better tomorrow, with your help</h1>
+              <h1 class="special fam-special">Making a better tomorrow, with your help</h1>
               <p class="intro">Providing the ability to bring your dream alive, and introducing the Internet with a gift.<br />
               Together we can conquer the obstacles and create something big. No idea is too small or too big to chase.<br />
               <span class="intro_span">So, let's struggle and achieve, together.</span></p>
@@ -61,28 +61,28 @@
         </div>
         <div id="portfolio"><br />
           <div class="" id ="port-sec">
-            <h2 class="special">Check out what I've been cookin</h2>
+            <h2 class="special fam-special">Check out what I've been cookin</h2>
             <section class="port--view" id="port--list"><!--PORTFOLIO SECTION-->
               <div class="row">
                 <div class="col-md-4 col-xs-12"><a href="https://ayojackay.github.io/cvfc/" target="_blank">
-                  <img src="img/fences.jpeg" alt="fences" class="pix-special img-responsive"><p class="description--port">CVFC Project</p>
-                </div></a>
+                  <img src="img/fences.jpeg" alt="fences" class="pix-special img-responsive"></a><p class="description--port fam-special">CVFC Project</p>
+                </div>
                 <div class="col-md-4 col-xs-12"><a href="https://ayojackay.github.io/magic8ball/" target="_blank">
-                  <img src="img/8ball.png" alt="8ball" class="pix-special img-responsive"><p class="description--port">Magic8Ball Project</p></a>
+                  <img src="img/8ball.png" alt="8ball" class="pix-special img-responsive"></a><p class="description--port fam-special">Magic8Ball Project</p>
                 </div>
                 <div class="col-md-4 col-xs-12"><a href="https://ayojackay.github.io/9.12p/" target="_blank">
-                  <img src="img/indiepine.jpg" alt="pineapple hand" class="pix-special img-responsive"><p class="description--port">Flor Project</p>
-                </div></a>
+                  <img src="img/indiepine.jpg" alt="pineapple hand" class="pix-special img-responsive"></a><p class="description--port fam-special">Flor Project</p>
+                </div>
               </div>
               <div class="row">
                 <div class="col-md-4 col-xs-12"><a href="https://ayojackay.github.io/writer-blog/" target="_blank">
-                  <img src="img/yellow.jpg" alt="yellow" class="pix-special img-responsive"><p class="description--port">Writer Project</p>
-                </div></a>
+                  <img src="img/yellow.jpg" alt="yellow" class="pix-special img-responsive"></a><p class="description--port fam-special">Writer Project</p>
+                </div>
                 <div class="col-md-4 col-xs-12 max-h"><a href="https://geekwiseb2.github.io/petstore-july-2017-ayojackay/" target="_blank">
-                  <img src="img/petlogo.png" alt="pet store" class="pix-special img-responsive"><p class="description--port">Pet Store Project</p>
-                </div></a>
+                  <img src="img/petlogo.png" alt="pet store" class="pix-special img-responsive"></a><p class="description--port fam-special">Pet Store Project</p>
+                </div>
                 <div class="col-md-4 col-xs-12"><a href="https://geekwiseb2.github.io/restaurante-july-17-ayojackay/" target="_blank">
-                  <img src="img/8.jpg" alt="restaurant" class="pix-special img-responsive"><p class="description--port">Restaurante Project</p></a>
+                  <img src="img/8.jpg" alt="restaurant" class="pix-special img-responsive"></a><p class="description--port fam-special">Restaurante Project</p>
                 </div>
               </div>
             </section><!-- end of PORTFOLIO -->
@@ -91,14 +91,14 @@
           <div id="skills">
           <div class="row" id="hero_2">
             <div class="col-md-6 col-xs-12 pad"> <!-- SKILLLS -->
-              <h2 class="bg-white-op special">My Progress</h2>
+              <h2 class="bg-white-op special fam-special">My Progress</h2>
               <p class="bg-white-op">
                 My skills are evolving as time wanders on. Finding new way's every day to perfect my craft and take care of you. You can also track my progress with my GitHub account. This allows you to see the project's I am working on in live view or to see the daily work I put in.
               </p>
-              <a class="btn btn-default" href="https://github.com/ayojackay" role="button" target="_blank">my github</a>   <button><i class="fa fa-google fa-4x special" aria-hidden="true"></i>aliensinventedpies
-                </button><br />
+              <a class="btn btn-default" href="https://github.com/ayojackay" role="button" target="_blank">my github</a>
+              <br />
             </div>
-            <div class="col-md-6 col-xs-12 pad f-black">
+            <div class="col-md-6 col-xs-12 pad f-black fam-special">
               <h2 class="special center">Skills</h2>
               <h4>Awesomeness</h4>
               <div class="progress">
@@ -131,18 +131,22 @@
         <div class="row">
           <div class="col-md-12 pad">
           <!--ABOUT SECTION with a Toggle to my Resume-->
-          <h2 class="special">My Story</h2>
+          <h2 class="special fam-special">My Story</h2>
           <div class="col-md-3 col-md-offset-1 col-xs-12 my-pic">
               <img src="img/me.jpg" alt="me" class="img-circle img-responsive my-pic">
             </div>
             <div class="col-md-8 col-xs-12 pad">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt unde, impedit. Voluptatibus dolorum quae quas adipisci nesciunt nihil ipsa temporibus qui mollitia? Beatae delectus, quisquam nam maxime, consequatur debitis architecto et velit rem temporibus, aliquid dignissimos. At iste laborum laboriosam hic quibusdam praesentium minima. Quas aperiam ea consequuntur! Mollitia, culpa!</p>
+              <p>Customer Care runs through my veins, and the thirst for Web Design is just the tip of the iceberg. Just a gal trying to survive and evolve in every way I can to help the world become a better place with my creativity coming to life.
+              A gift to add to my uniquness, my mother decided to spell my name Jacque instead of "Jackie" which has allowed me to indirectly stand out and really push for difference .
+            Driven to live for those who can't and spread my knowledge through the winds of Fresno. Striving to push my limits and some day provide a program that will benefit the people of Fresno, and the world in general.
+            And most of all, my main goal is to make sure you're happy and that your dream can come alive with my drive.
+          </p>
               <!--RESUME MODAL -->
               <!-- Large modal -->
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">My Resume</button>
               <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
                 <div class="modal-dialog modal-lg" role="document">
-                  <div class="modal-content resume">
+                  <div class="modal-content">
                     <section>
                     <h2>Jacquelyn Solano</h2>
                     <sub>Administrative Assistant / Web Development</sub>
@@ -174,11 +178,12 @@
                     <p><span class="job-title__resume">Wienerschnitzel - Fresno, CA - 2013 to 2014</span><br />I prepared and cooked hot meals for customers on demand. Maintained the kitchen by restocking, stock rotating, and cleaning. Three nights out of the week I was the closer of the shift which required me to prepare the kitchen for the morning crew members. Periodically, I would assist on the cash register including receiving payments, took orders, served customer their meals on trays/bags, and cleaning the lobby.</p><br />
                     <h3 class="job-category__resume">Caregiver</h3>
                     <p><span class="job-title__resume">I.H.S.S - Fresno, CA - 2012 to 2014</span><br />I assisted my disabled mother by transporting her to physician appointments, along with lifting and turning her, assisting with restroom use, as well as monitoring her medication intake.</p><br />
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default " data-dismiss="modal">Close</button>
                 </div>
               </div>
             </div>
             <!-- end of RESUME MODAL-->
+            <span><i class="fa fa-google fa-3x special" aria-hidden="true"></i><i class="fa fa-envelope special" aria-hidden="true"></i>aliensinventedpies</span>
           </div>
         </div>
         </div>
@@ -186,7 +191,7 @@
       <!--FORM SECTION -->
       <div id="form">
       <div class="row" id="hero_3">
-        <h1 class="special">Contact me, and let's create the next great thing.</h1>
+        <h1 class="special fam-special">Contact me, and let's create the next great thing.</h1>
         <form class="col s12 f-black" method="post" action="mailto: aliensinventedpies.com" name="contact_form">
           <div class="row">
             <div class="input-field col s6">
