--- a/index.html
+++ b/index.html
@@ -85,6 +85,18 @@
                   <img src="img/8.jpg" alt="restaurant" class="pix-special img-responsive"></a><p class="description--port fam-special">Restaurante Project</p>
                 </div>
               </div>
+              <h4 class="special fam-special">Contributions</h4>
+              <div class="row">
+                <div class="col-md-6 col-xs-12"><a href="https://github.com/sarahneely/kidmergencies" target="_blank">
+                  <img src="img/fam.png" alt="yellow" class="pix-special img-responsive"></a><p class="description--port fam-special">Kidmergencies</p>
+                </div>
+                <div class="col-md-6 col-xs-12"><a href="https://github.com/parkersalterego/hackathonAngular1-18" target="_blank">
+                  <img src="img/giphy.gif" alt="yellow" class="pix-special img-responsive"></a><p class="description--port fam-special">Hackathon '18</p>
+                </div>
+                <div class="col-md-6 col-xs-12"><a href="https://ayojackay.github.io/myGitGrub/" target="_blank">
+                  <img src="img/GitGrub_logo.png" alt="yellow" class="pix-special img-responsive"></a><p class="description--port fam-special">My GitGrub <small>(in progress)</small></p>
+                </div>
+              </div>
             </section><!-- end of PORTFOLIO -->
           </div>
         </div>
@@ -118,10 +130,10 @@
                   90%
                 </div>
               </div>
-              <h4>Angular 2/Typescript</h4>
+              <h4>Angular 4/Typescript</h4>
               <div class="progress">
-                <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 25%">
-                  25%
+                <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 97%">
+                  97%
                 </div>
               </div>
         </div>  <!-- end of SKILLS-->
