made sure to connect port to link, finished

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
           <ul class="nav nav-pills">
-            <li role="presentation" class="active"><a href="#">Home</a></li>
+            <li role="presentation" class="active"><a href="https://ayojackay.github.io/portfolio/">Home</a></li>
             <li role="presentation"><a href="#portfolio">Portfolio</a></li>
             <li role="presentation"><a href="#skills">Skills</a></li>
             <li role="presentation"><a href="#about">About/Resume</a></li>
